--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :car_type %><br>
     <%= f.text_field :car_type %>
   </div>
+  <div class="field">
+    <%= f.label :photo %><br>
+    <%= f.file_field :photo %><br />
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
