--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@listing) do |f| %>
+<%= simple_form_for(@listing, html: { class: 'form-horizontal' }) do |f| %>
   <% if @listing.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
@@ -12,40 +12,31 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.input :location_id, collection: @myLocs, prompt: "Select Location..." %>
   </div>
   <div class="field">
-    <%= f.label :location_id %><br>
-    <%= f.number_field :location_id %>
+    <%= f.input :half_day %>
   </div>
   <div class="field">
-    <%= f.label :half_day %><br>
-    <%= f.number_field :half_day %>
+    <%= f.input :full_day %>
   </div>
   <div class="field">
-    <%= f.label :full_day %><br>
-    <%= f.number_field :full_day %>
+    <%= f.input :week %>
   </div>
   <div class="field">
-    <%= f.label :week %><br>
-    <%= f.number_field :week %>
+    <%= f.input :month %>
   </div>
   <div class="field">
-    <%= f.label :month %><br>
-    <%= f.number_field :month %>
+    <%= f.input :min_to_campus %>
   </div>
   <div class="field">
-    <%= f.label :startDateTime %><br>
-    <%= f.datetime_select :startDateTime %>
+    <%= f.input :startDateTime %>
   </div>
   <div class="field">
-    <%= f.label :endDateTime %><br>
-    <%= f.datetime_select :endDateTime %>
+    <%= f.input :endDateTime %>
   </div>
   <div class="field">
-    <%= f.label :active %><br>
-    <%= f.check_box :active %>
+    <%= f.input :active %><br>
   </div>
   <div class="actions">
     <%= f.submit %>
