--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -3,34 +3,29 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Location</th>
       <th>Half day</th>
       <th>Full day</th>
       <th>Week</th>
       <th>Month</th>
-      <th>Startdatetime</th>
-      <th>Enddatetime</th>
-      <th>Active</th>
-      <th colspan="3"></th>
+      <th>Start Date</th>
+      <th>End Date</th>
+      <th>Min to Campus</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @listings.each do |listing| %>
       <tr>
-        <td><%= listing.user_id %></td>
-        <td><%= listing.location_id %></td>
         <td><%= listing.half_day %></td>
         <td><%= listing.full_day %></td>
         <td><%= listing.week %></td>
         <td><%= listing.month %></td>
         <td><%= listing.startDateTime %></td>
         <td><%= listing.endDateTime %></td>
-        <td><%= listing.active %></td>
+        <td><%= listing.min_to_campus %></td>
         <td><%= link_to 'Show', listing %></td>
         <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
