--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -40,6 +40,6 @@
     <%= f.file_field :photo %><br />
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'button radius small expand'%>
   </div>
 <% end %>
