--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,6 +6,6 @@
   <%= f.input :email %>
   
   <div class="form-actions">
-    <%= f.submit nil, class: 'button radius' %>
+    <%= f.submit nil, class: 'button radius small expand' %>
   </div>
 <% end %>
