--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -1,3 +1,45 @@
-// Place all the styles related to the Locations controller here.
+/*// Place all the styles related to the Locations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+*/
+
+.th{
+
+}
+.th{
+	width: 40%;
+	height: auto;
+}
+.locationContainer:hover{
+	background-color: #ededed;
+
+}
+
+.locationContainer img {
+    position: relative;
+    float: left;
+    max-width: 17%;
+    height: auto;
+    background-position: 50% 50%;
+    background-repeat:   no-repeat;
+}
+
+.locationContainer h6,p{
+	margin-left: 22%;
+}
+
+/* ----------------show.html.erb css starts from here ---------------------- */
+
+#showImg{
+	width: 100%;
+	/*height: 100%;*/
+	overflow: hidden;
+}
+
+#showImg img{
+	width: 70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
