Sharmin's version of location. needs to be changed

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@listing) do |f| %>
+<%= simple_form_for(@listing, html: { class: 'form-horizontal' }) do |f| %>
   <% if @listing.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
@@ -11,43 +11,18 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :location_id %><br>
-    <%= f.number_field :location_id %>
-  </div>
-  <div class="field">
-    <%= f.label :half_day %><br>
-    <%= f.number_field :half_day %>
-  </div>
-  <div class="field">
-    <%= f.label :full_day %><br>
-    <%= f.number_field :full_day %>
-  </div>
-  <div class="field">
-    <%= f.label :week %><br>
-    <%= f.number_field :week %>
-  </div>
-  <div class="field">
-    <%= f.label :month %><br>
-    <%= f.number_field :month %>
-  </div>
-  <div class="field">
-    <%= f.label :startDateTime %><br>
-    <%= f.datetime_select :startDateTime %>
-  </div>
-  <div class="field">
-    <%= f.label :endDateTime %><br>
-    <%= f.datetime_select :endDateTime %>
-  </div>
-  <div class="field">
-    <%= f.label :active %><br>
-    <%= f.check_box :active %>
-  </div>
+    <%= f.input :location_id, collection: @myLocs, prompt: "Select Location..." %>
+    <%= f.input :space_type, collection: [['Street','Street'],['Driveway','Driveway'], ['Garage', 'Garage']], prompt: "Select space type..." %>
+    <%= f.input :half_day, label: "Half-Day Rate ($)" %>
+    <%= f.input :full_day, label: "Day Rate ($)" %>
+    <%= f.input :week, label: "Week Rate ($)" %>
+    <%= f.input :month, label: "Month Rate ($)" %>
+    <%= f.input :min_to_campus %>
+    <%= f.input :startDateTime, label: "Start Date and Time" %>
+    <%= f.input :endDateTime, label: "End Date and Time"%>
+    <%= f.input :active %><br>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'button radius small expand'%>
   </div>
 <% end %>
