--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,40 +1,59 @@
-<div id="showImg">
- <img><%= image_tag @location.photo_url(:thumb) if @location.photo? %> 
+<div class="row">
+  <div class="small-4 columns">
+    <%= link_to 'Back', locations_path, class: 'button tiny radius secondary right' %>
+  </div>
+  <div class="small-4 columns">
+    <%= link_to 'Edit', edit_location_path(@location), class: 'button tiny radius secondary right' %>
+  </div>
+  <div class="small-4 columns">
+    <%= link_to 'Destroy', locations_path , method: :delete, data: { confirm: 'Are you sure?' } , class: 'button tiny radius secondary right' %>
+  </div>
+</div>  
+
+
+<div class = "row">
+  <div class ="small-12 columns">
+    <%= image_tag @location.photo_url() if @location.photo? %> 
+  </div>
 </div>
 
-<p id="notice"><%= notice %></p>
+<div class = "row">
+  <div class = "small-12 columns">
+    <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Street address:</strong>
-  <%= @location.street_address %>
-</p>
+    <p>
+      <strong>Street address:</strong>
+      <%= @location.street_address %>
+    </p>
 
-<p>
-  <strong>City:</strong>
-  <%= @location.city %>
-</p>
+    <p>
+      <strong>City:</strong>
+      <%= @location.city %>
+    </p>
 
-<p>
-  <strong>State:</strong>
-  <%= @location.state %>
-</p>
+    <p>
+      <strong>State:</strong>
+      <%= @location.state %>
+    </p>
 
-<p>
-  <strong>Zip code:</strong>
-  <%= @location.zip_code %>
-</p>
+    <p>
+      <strong>Zip code:</strong>
+      <%= @location.zip_code %>
+    </p>
 
-<p>
-  <strong>Num cars:</strong>
-  <%= @location.num_cars %>
-</p>
+    <p>
+      <strong>Num cars:</strong>
+      <%= @location.num_cars %>
+    </p>
 
-<p>
-  <strong>Car type:</strong>
-  <%= @location.car_type %>
-</p>
+    <p>
+      <strong>Car type:</strong>
+      <%= @location.car_type %>
+    </p>
 
-<%= link_to 'Edit', edit_location_path(@location) %> |
-<%= link_to 'Back', locations_path %> |
-<%= link_to 'Destroy', locations_path , method: :delete, data: { confirm: 'Are you sure?' } %>
+  </div>
+
+</div>
+
+
 
