--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1463,13 +1463,38 @@ a, h1,h2,h3,h4,h5,h6, p {
 }
 
 .smallHeading {
-	font-size: 14px;
+	font-size: 15px;
 }
 
 .smallSubHeading {
-	font-size: 12px;
+	font-size: 13px;
 }
 
 .gray {
 	color: #909090 ;
+}
+.padding-top {
+	padding-top: 10px;
+}
+.padding-left {
+	padding-left: 15px;
+}
+.padding-right {
+	padding-right: 15px;
+}
+
+.overlay-container {
+  position: relative; 
+}
+
+.overlay-container .overlay {
+  position: absolute; 
+  bottom: 0;          
+  left: 0;            
+  right: 0;          
+
+  padding: 0.4rem;
+  background-color: rgba(43, 46, 54, 0.7);
+  color: White;
+  font-size: 14px;
 }
