--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,6 +1,13 @@
 <h1>Editing location</h1>
 
+<div class="row">
+  <div class="large-3 columns"></div>
+  <div class="large-3 columns"></div>
+  <div class="large-3 columns">
+    <%= link_to 'Back', locations_path, class: 'button tiny radius secondary right' %>
+  </div>
+</div>  
+
+
 <%= render 'form' %>
 
-<%= link_to 'Show', @location %> |
-<%= link_to 'Back', locations_path %>
