Added link to listing show page. working on purchase controller

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -13,7 +13,7 @@
     <% end %>
   </div>
   <div class="small-7 columns">
-    <span class="smallHeading"><strong><%= listing.location.street_address %></strong><br>
+    <span class="smallHeading"><strong><%= link_to listing.location.street_address, listing %></strong><br>
     <span class="smallSubHeading gray"><%= listing.space_type %></span><br><br>
     <%= link_to 'Edit', edit_listing_path(listing) %>
   </div>
