--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -2,31 +2,31 @@
 
 <p>
   <strong>Half day:</strong>
-  <%= @listing.half_day %>
+  $<%= @listing.half_day %>
 </p>
 
 <p>
   <strong>Full day:</strong>
-  <%= @listing.full_day %>
+  $<%= @listing.full_day %>
 </p>
 
 <p>
   <strong>Week:</strong>
-  <%= @listing.week %>
+  $<%= @listing.week %>
 </p>
 
 <p>
   <strong>Month:</strong>
-  <%= @listing.month %>
+  $<%= @listing.month %>
 </p>
 
 <p>
-  <strong>Startdatetime:</strong>
+  <strong>Start Date:</strong>
   <%= @listing.startDateTime %>
 </p>
 
 <p>
-  <strong>Enddatetime:</strong>
+  <strong>End Date:</strong>
   <%= @listing.endDateTime %>
 </p>
 
