--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1498,3 +1498,18 @@ a, h1,h2,h3,h4,h5,h6, p {
   color: White;
   font-size: 14px;
 }
+
+.center {
+	text-align: center;
+}
+
+.bigHeading {
+	font-size: 16px;
+}
+
+.alignRight {
+	text-align: right;
+}
+.alignLeft {
+	text-align: left;
+}
