--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -16,6 +16,7 @@
           <li> <%= link_to 'My Locations', locations_path %> </li>
             <li> <%= link_to 'Log Out', logout_path %> </li>
           <% else %>
+            <li> <%= link_to 'Sign Up!', signup_path %> </li>
             <li> <%= link_to 'Log In', login_path %> </li>
           <% end %>
         </ul>
