Added Payment method to payment form. Removed dead code

--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -18,6 +18,9 @@
   <%= f.input :make %>
   <%= f.input :license %>
 
+  Payment Method
+  <%= select("Payment Method", "Card", @payments) %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
