Changed button, added link to home:

--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -22,6 +22,6 @@
   <%= select("Payment Method", "Card", @payments) %>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'button radius small expand'%>
   </div>
 <% end %>
