Added btn and changed some heading wording

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing purchases</h1>
+<h1>Purchased Listings</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Date</th>
+      <th>Purchase Date</th>
       <th colspan="1"></th>
     </tr>
   </thead>
