--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -25,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Location', new_location_path, class: 'button radius small expand' %>
+<%= link_to 'New Location', new_location_path, class: 'button radius expand' %>
