--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,31 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class = "small-5 columns">
+      <%= image_tag @user.picture_url() if @user.picture? %> 
+  </div>
 
-<p>
-  <strong>Username:</strong>
-  <%= @user.username %>
-</p>
+  <div class = "small-7 columns">
+      <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Password:</strong>
-  <%= @user.password %>
-</p>
+    <p>
+      <strong><%= @user.username %></strong>
+    </p>
 
-<p>
-  <strong>Password confirmation:</strong>
-  <%= @user.password_confirmation %>
-</p>
+    <p>
+      <strong>Email:</strong>
+      <%= @user.email %>
+    </p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
+        <p>
+    <strong>Card Number :</strong>
+      <%= @payments[0].card_number %>
+    </p>
 
-<p>
-  <strong>Picture:</strong>
-  <%= @user.picture %>
-</p>
+
+  </div>
+</div>
+
+
+
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
