--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,6 +1,11 @@
+<div class="row">
+
+  <div class="small-3 columns">
+    <%= link_to 'Back', @listing, class: 'button tiny radius secondary right' %>
+  </div>
+
+</div>  
+
 <h1>Editing listing</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @listing %> |
-<%= link_to 'Back', listings_path %>
