--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,13 +1,11 @@
-<h1>Editing location</h1>
+
 
 <div class="row">
-  <div class="large-3 columns"></div>
-  <div class="large-3 columns"></div>
-  <div class="large-3 columns">
+  <div class="small-3 columns">
     <%= link_to 'Back', locations_path, class: 'button tiny radius secondary right' %>
   </div>
 </div>  
 
-
+<h1>Editing location</h1>
 <%= render 'form' %>
 
