--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -14,6 +14,7 @@
           <li><%= link_to 'My Parkings', purchases_path %></li> 
           <li><%= link_to 'My Listings', listings_path %></li> 
           <li> <%= link_to 'My Locations', locations_path %> </li>
+          <li> <%= link_to 'My Profile', current_user %> </li>
             <li> <%= link_to 'Log Out', logout_path %> </li>
           <% else %>
             <li> <%= link_to 'Sign Up!', signup_path %> </li>
