--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,9 @@
+<div class="row">
+  <div class="small-3 columns">
+    <%= link_to 'Back', @user, class: 'button tiny radius secondary right' %>
+  </div>
+</div>  
+
 <h1>Editing user</h1>
 
 <%= render 'form' %>
