--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@location) do |f| %>
+<%= simple_form_for(@location) do |f| %>
   <% if @location.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@location.errors.count, "error") %> prohibited this location from being saved:</h2>
@@ -11,30 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :street_address %><br>
-    <%= f.text_field :street_address %>
-  </div>
-  <div class="field">
-    <%= f.label :city %><br>
-    <%= f.text_field :city %>
-  </div>
-  <div class="field">
-    <%= f.label :state %><br>
-    <%= f.text_field :state %>
-  </div>
-  <div class="field">
-    <%= f.label :zip_code %><br>
-    <%= f.text_field :zip_code %>
-  </div>
-  <div class="field">
-    <%= f.label :num_cars %><br>
-    <%= f.number_field :num_cars %>
-  </div>
-  <div class="field">
-    <%= f.label :car_type %><br>
-    <%= f.text_field :car_type %>
-  </div>
+    <%= f.input :street_address %><br>
+    <%= f.input :city %><br>
+    <%= f.input :state, :collection => Location::STATES_LIST, :prompt => "Select a state..." %>
+    <%= f.input :zip_code %><br>
+    <%= f.input :num_cars, label: 'Num. Cars' %><br>
+    <%= f.input :car_type, label: 'Car Types' %><br>
   <div class="field">
     <%= f.label :photo %><br>
     <%= f.file_field :photo %><br />
