swathi added user testing feedback

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.input :city %><br>
     <%= f.input :state, :collection => Location::STATES_LIST, :prompt => "Select a state..." %>
     <%= f.input :zip_code %><br>
-    <%= f.input :num_cars, label: 'Num. Cars' %><br>
+    <%= f.input :num_cars, label: 'Number of Cars' %><br>
     <%= f.input :car_type, label: 'Car Types' %><br>
   <div class="field">
     <%= f.label :photo %><br>
