--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -40,7 +40,7 @@
     </p>
 
     <p>
-      <strong>Num cars:</strong>
+      <strong>Number of cars:</strong>
       <%= @location.num_cars %>
     </p>
 
