--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -5,7 +5,9 @@
   </div>
 
 </div>  
-
-<h1>Editing listing</h1>
-
-<%= render 'form' %>
+<% if current_user.id == @listing.user_id %>
+	<h1>Editing listing</h1>
+	<%= render 'form' %>
+<% else %>
+	<h1>Access Denied</h1>
+<% end %>
