--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<% if @closestListings%>
 <% @closestListings.each do |listing| %>
 <div class="row">
   <div class="small-12 columns">
@@ -20,3 +21,6 @@
 </div>  
 <br>
 <% end %>
+<% else %>
+<h3>There are no listings in the area</h3>
+<% end %>  
