--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -4,6 +4,9 @@
   <div class="large-3 columns">
     <%= link_to 'New Listing', new_listing_path, class: 'button tiny radius secondary right' %>
   </div>
+<% if @listings.length == 0 %>
+<h3>You have no listings!</h3>
+<% else %>
 </div>  
 <% @listings.each do |listing| %>
 <div class="row">
@@ -20,3 +23,4 @@
   <hr>
 </div>
 <% end %>
+<% end %>  
