--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -5,7 +5,7 @@
     <%= link_to 'New Location', new_location_path, class: 'button tiny radius secondary right' %>
   </div>
 </div>  
-
+<% if @locations %>
 <% @locations.each do |location| %>
 <div class="row">
   <div class="small-5 columns">
@@ -21,5 +21,6 @@
   <hr>
 </div>
 <% end %>
-
-
+<% else %>
+<h3>You have no locations! </h3>
+<% end %>  
