--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -4,6 +4,7 @@
   <div class="large-3 columns">
     <%= link_to 'New Listing', new_listing_path, class: 'button tiny radius secondary right' %>
   </div>
+</div>
 <% if @listings.length == 0 %>
 <h3>You have no listings!</h3>
 <% else %>
